--- a/web/src/components/pages/CanvasPage/Content/About/Mobile/About.module.scss
+++ b/web/src/components/pages/CanvasPage/Content/About/Mobile/About.module.scss
@@ -88,6 +88,7 @@
 
 						.body {
 							@include body;
+							text-align: left;
 						}
 					}
 
