--- a/web/src/components/pages/CanvasPage/Content/Melee/Mobile/Melee.module.scss
+++ b/web/src/components/pages/CanvasPage/Content/Melee/Mobile/Melee.module.scss
@@ -3,11 +3,11 @@
 .Melee {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
 	justify-content: center;
 	height: 100%;
 
 	.imageContainer {
+		width: 200px;
 		padding: 25px;
 
 		.image {
