--- a/web/src/components/pages/CanvasPage/Content/Projects/Mobile/Projects.module.scss
+++ b/web/src/components/pages/CanvasPage/Content/Projects/Mobile/Projects.module.scss
@@ -1,6 +1,3 @@
 .Projects {
 	padding-top: 16px;
-	padding-left: 16px;
-	width: calc(100% - 16px);
-	height: 100%;
 }
